git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@755 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -679,6 +679,7 @@ fr-FR:
       entity_nature_name: Type    
       entity_reduction_rate: Taux de réduction
       first_contact: Adresse principale
+      import_succeed: 'Vos données ont été correctement importées '
       second_contact: Adresse secondaire
       title: Relations
       you_must_select_a_file_to_import: Vous devez sélectionner un fichier à importer
