--- a/config/locales/fr-FR/help/company-index.txt
+++ b/config/locales/fr-FR/help/company-index.txt
@@ -2,4 +2,6 @@ h1. Informations sur la société
 
 * Vous avez ici accès aux différentes informations concernant votre société. Vous pouvez également ajouter, modifier ou supprimer un utilisateur, un établissement ou un service, ainsi que vérouiller un utilisateur (celui-ci n'aura plus accès au logiciel).
 
+* Vous pouvez *définir les droits* (*prix libres* , *taux de réduction autorisé*)d'un utilisateur depuis le formulaire de création/modification d'un utilisateur.
+
 * Par défaut, un établissement et un service vous sont créés automatiquement.
