--- a/config/locales/fr-FR/help/relations-entities.txt
+++ b/config/locales/fr-FR/help/relations-entities.txt
@@ -1,4 +1,4 @@
-h1. Comment gérer ces fiches de relations ?
+h1. Comment gérer ses fiches de relations ?
 
 h2. La recherche d'une fiche
 La barre de recherche d'une fiche vous permet de trouver des fiches client ou fournisseur. Cette recherche s'effectue sur *tous les champs*, c'est à dire sur toutes les informations concernant la fiche. 
@@ -15,5 +15,9 @@ Vous pouvez :
 * l'afficher :  <<relations-entities_display|{{buttons/show.png|afficher}}>>
 * la modifier : <<relations-entities_update|{{buttons/update.png|modifier}}>> 
 * la supprimer : {{buttons/delete.png|supprimer}}
+
+h2. Import Export CSV
+* *Exporter vos fiches* au format csv vous permet d'enregistrer un fichier csv au <<relations-entities_import|format ekylibre>>, rassemblant l'ensemble de vos fiches clients fournisseurs et leurs informations. Vous pouvez ensuite *travailler sur ce fichier en modifiant ou en ajoutant des fiches* clients fournisseurs. Pour *répercuter dans le logiciel ces changements*, vous n'avez plus qu'à *<<relations-entities_import|importer>> votre fichier* csv modifié.
+
 
 <<relations-index|Revenir à l'aide de gestion des relations >>
