--- a/config/locales/fr-FR/help/relations-entities_import.txt
+++ b/config/locales/fr-FR/help/relations-entities_import.txt
@@ -4,6 +4,8 @@ h1. Comment importer un fichier CSV ?
 
 * Sélectionnez le fichier à télécharger. Ceci va modifier votre base de données de fiches clients et fournisseurs. En effet, si vous avez *modifié ou ajouté des fiches* dans votre fichier csv qui ne l'étaient pas dans la base de données du logiciel, celles-ci le seront grâce à l'import.
 
+* Pour *ajouter une fiche client ou fournisseur à votre base de données Ekylibre*, vous n'avez qu'à *ajouter une ligne au fichier* csv en veillant à respecter les contraintes relatives à chaque champ (ex: le nom ne peut être vide ...).
+
 * Vous pouvez donc *générer automatiquement des fiches clients fournisseurs ainsi que des types de fiche*. En effet si le type de fiche du fichier csv n'existe pas, celui-ci sera également créé. 
 
 * Veillez à bien *respecter le format des colonnes* présenté sur la page afin que l'import puisse s'effectuer correctement.
