--- a/config/locales/fr-FR.management.yml
+++ b/config/locales/fr-FR.management.yml
@@ -1,6 +1,7 @@
 fr-FR: 
   controllers:
     management:
+      category: Catégorie
       title: Commerce
       delays:
         delays_create: 'Ajouter un nouveau délai'
@@ -39,6 +40,7 @@ fr-FR:
       no_lines_found: 'Aucun pruduit n''a été ajouté à la commande '
       paid_on: Réglé le
       payment_amount: Montant du paiement
+      you_must_select_a_file_to_import: Vous devez sélectionner un fichier à importer
       messages:
         invoice_already_created: 'La facture de cette livraison a déjà été créée'
         need_product_to_create_price: 'Pour pouvoir ajouter un prix, il vous faut d''abord enregistrer un produit à tarifer.'
@@ -150,6 +152,8 @@ fr-FR:
          all: Tous les prix
          client: Les prix de vente
          display: 'Afficher :'
+         prices_export: Tout exporter au format CSV
+         prices_import: Importer un fichier CSV
          purchases_prices_create: 'Ajouter un prix d''achat '
          sales_prices_create: Ajouter un prix de vente
          supplier: 'Les prix d''achat du fournisseur'
@@ -159,7 +163,9 @@ fr-FR:
       _prices_form:
         general: Général
         taxes: Taxes
-
+      prices_import:
+        file_to_download: Fichier à importer
+        title: Importer un fichier CSV de tarifs
       price_lists:
         title: Gérer les listes de prix
         price_lists_create: Ajouter une nouvelle liste de prix
