git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@779 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.management.yml
+++ b/config/locales/fr-FR.management.yml
@@ -141,16 +141,17 @@ fr-FR:
           other: '{{count}} factures enregistrées'
         title: Factures
       invoices_cancel:
-        already_credited_quantity: Q. déjà passée en avoir
+        already_credited_quantity: Qté. déjà passée en avoir
         price_amount: Prix HT
         price_amount_with_taxes: Prix TTC
         product: Produit
-        quantity_to_credit: Q. à passer en avoir
-        title: 'Avoir de la facture {{value}} au client {{name}} datée du {{date}} '
-        total_quantity: Q. totale
+        quantity_to_credit: Qté. à passer en avoir
+        title: 'Passage en avoir de la facture {{value}}'
+        total_quantity: Qté. totale
         unit: Unité
         validate: Valider
       invoices_display:
+        credits: Avoirs 
         invoice_lines: Lignes de la facture
         title: 'Facture : {{number}}'
       _invoices_search: 
