--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -273,6 +273,10 @@ fr-FR:
       department:
         name: Nom
         comment: Commentaire
+      embankment: 
+        bank_account_id: Compte bancaire
+        created_on: Crée le
+        mode_id: Type de chèque
       employee:
         title: Fonction
         first_name: Nom
@@ -405,6 +409,7 @@ fr-FR:
         check_number: Numéro de chèque
         mode_id: Mode de paiement
         paid_on: Réglé le 
+        to_bank_on: À encaisser le
       payment_mode:
         account_id: Compte associé
         mode: Mode
