--- a/config/locales/fr-FR/help/management-index.txt
+++ b/config/locales/fr-FR/help/management-index.txt
@@ -7,6 +7,7 @@ h2. Comment gérer ses achats et ses ventes ?
 * La gestion commerciale fait le lien avec les relations clients/fournisseurs en vous permettant de choisir, lors d'achats ou de ventes, les clients ou les fournisseurs que vous avez préalablement enregistrés par le biais des fiches.
 * Vous pouvez consulter l'ensemble des achats et ventes effectués à vos différents clients et fournisseurs.
 * Les achats et les ventes permettent la création de *documents* tels que des devis, commandes, factures, qu'il est possible de sauvegarder et d'imprimer.
+* Vous avez également la possibilité de *rechercher des factures* et éventuellement de les *passer en avoir*, ainsi que de *créer des remises de chèques* afin d'imprimer un *bordereau de remise de chèques*.
 
 h2. Comment gérer ses stocks ?
 * La première étape consiste à enregistrer ses *lieux de stockage*. L'affichage d'un lieu de stockage permet d'enregistrer des *mouvements de stocks*.
