git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@804 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -184,6 +184,7 @@ fr-FR:
         label: Label
       bank_account:
         address: Adresse
+        bank_name: Nom de la banque
         name: Intitulé
         bank_code: Code banque
         agency_code: Code guichet 
