git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@809 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -56,6 +56,7 @@ fr-FR:
       default: "%d/%m/%Y"
       short: "%b %d" 
       long: "%B %d, %Y" 
+      month_letter: "%d %B %Y"
 
     day_names: [Dimanche, Lundi, Mardi, Mercredi, Jeudi, Vendredi, Samedi]
     abbr_day_names: [Dim, Lun, Mar, Mer, Jeu, Ven, Sam]
