git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@810 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.management.yml
+++ b/config/locales/fr-FR.management.yml
@@ -401,6 +401,8 @@ fr-FR:
         conditions: "Conditions de paiement"
         delays: 'Délais'
         downpayment: "Options pour l'acompte"
+      sales_print:
+        deliveries_number: "jjkjj"
       shelves:
         title: Gérer les catégories de produits
       shelves_create:
