git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@827 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.accountancy.yml
+++ b/config/locales/fr-FR.accountancy.yml
@@ -195,7 +195,11 @@ fr-FR:
         journal: Journal
         from: Période du
         to: Au
-      _print_date_to_date:
+      _print_journals: 
+        dates: Saisissez les dates
+        from: Période du
+        to: Au
+      _print_balance:
         dates: Saisissez les dates de début et de fin de la période
         from: Période du
         to: Au
