git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@828 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.accountancy.yml
+++ b/config/locales/fr-FR.accountancy.yml
@@ -203,6 +203,10 @@ fr-FR:
         dates: Saisissez les dates de début et de fin de la période
         from: Période du
         to: Au
+      _print_ledger:
+        dates: Saisissez les dates de début et de fin de la période
+        from: Période du
+        to: Au
       print_balance_sheet:
         title: Impression du bilan 
         period: Période
