--- a/config/locales/fr-FR.rights.yml
+++ b/config/locales/fr-FR.rights.yml
@@ -1,14 +1,14 @@
 fr-FR:
   rights:
-    access_to_company: Accéder au module Société
-    access_to_index: 'Accéder à l''acceuil du logiciel'
-    access_to_management: Accéder au module Gestion commerciale
+    administrate_accountancy: Accéder au module Comptabilité
+    administrate_authentication: Possibilité de se connecter
+    administrate_company: Accéder au module Société/Utilisateurs
+    administrate_guide: 'Accéder à l''acceuil du logiciel'
+    administrate_help: 'Consulter l''aide'
+    administrate_management: Accéder au module Gestion Commerciale
+    administrate_production: Accéder au module Production
+    administrate_relations: Accéder au module Relations clients/fournisseurs
+    administrate_resources: Accéder au module Ressources
+    administrate_search: Possibilité de rechercher (fiche client, produits,...)
     consult_sales: Consulter les ventes
-    consult_stocks: 'Consulter l''état des stocks'
-    create_sales: Créer une vente
-    manage_company: Gérer les informations concernant la société
-    manage_purchases: Gérer les achats
-    manage_rights: Gérer les droits utilisateurs
-    manage_stocks: Gérer les stocks
-    manage_taxes: Gérer les taxes
-    manage_users: Gérer les utilisateurs
+    create_new_sales: Créer une nouvelle vente
