git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@842 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.accountancy.yml
+++ b/config/locales/fr-FR.accountancy.yml
@@ -203,6 +203,9 @@ fr-FR:
         dates: Saisissez les dates de début et de fin de la période
         from: Période du
         to: Au
+      _print_balance_sheet:
+        balance_sheet: 'Sélectionnez l''exercice'
+        select_financialyear: Exercice
       _print_ledger:
         dates: Saisissez les dates de début et de fin de la période
         from: Période du
