git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@844 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -802,6 +802,7 @@ fr-FR:
     # Company
     company:
       index:
+        backup: Enregistrer une sauvegarde
         departments: Services
         departments_create: Ajouter un nouveau service
         departments_number: Nombre de services
