git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@856 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -752,7 +752,7 @@ fr-FR:
     application:
       yes: oui
       no: non
-      exit: Quitter
+      exit: Se déconnecter
     authentication:
     company:
     guide:
