--- a/config/locales/fr-FR.rights.yml
+++ b/config/locales/fr-FR.rights.yml
@@ -19,6 +19,7 @@ fr-FR:
     create_estimates: Créer un devis
     create_purchases: Créer, modifier des achats
     import_export_entities: Importer, exporter des fiches clients/fournisseurs
+    manage_company: Gérer les informations de la société  
     manage_complements: Gérer les champs personnalisés
     manage_delays: Gérer les délais 
     manage_delivery_modes: Gérer les types de livraison
@@ -32,8 +33,11 @@ fr-FR:
     manage_orders: Gérer les commandes et livraisons
     manage_payment_modes: Gérer les modes de paiments
     manage_prices: Gérer les prix
+    manage_productions: Gérer les productions
     manage_products: Gérer les produits
     manage_sale_order_natures: Gérer les types de vente
+    manage_shape_operations: Gérer les traitements
+    manage_shapes: Gérer les îlots
     manage_shelves: Gérer les catégories de produits
     manage_stock_locations: Gérer les lieux de stockage
     manage_stock_moves: Gérer les mouvements de stocks
